array.island.Island.scala.error
Erreur de compilation :
Island:3: error: missing argument list for method island in class Island
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `island _` or `island(_)` instead of `island`.
  for(i <- 1 until island.length)
                   ^