array.island.Island.scala.code
def island(num:Array[Int]): Int = {var n = 0 ;
  for(i <- 1 until island.length)
      {if (num(i-1)<num(i))
           {n+=1;}
      }
  return(n)
}